[gd_scene load_steps=32 format=2]

[ext_resource path="res://droid_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://WalkingDroid.gd" type="Script" id=3]

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 23, 23 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Damage"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 30 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 12 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Wake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Damage"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Death"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Wake"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=27]
states/Attack/node = SubResource( 9 )
states/Attack/position = Vector2( 68, -103 )
states/Damage/node = SubResource( 10 )
states/Damage/position = Vector2( 511, -83 )
states/Death/node = SubResource( 11 )
states/Death/position = Vector2( 696, -23 )
states/Idle/node = SubResource( 12 )
states/Idle/position = Vector2( 245, 56 )
states/Run/node = SubResource( 13 )
states/Run/position = Vector2( 312, -97 )
states/Wake/node = SubResource( 14 )
states/Wake/position = Vector2( 435, 33 )
transitions = [ "Idle", "Wake", SubResource( 15 ), "Wake", "Idle", SubResource( 16 ), "Wake", "Run", SubResource( 17 ), "Run", "Wake", SubResource( 18 ), "Idle", "Attack", SubResource( 19 ), "Run", "Attack", SubResource( 20 ), "Run", "Damage", SubResource( 21 ), "Damage", "Run", SubResource( 22 ), "Idle", "Damage", SubResource( 23 ), "Damage", "Idle", SubResource( 24 ), "Damage", "Death", SubResource( 25 ), "Attack", "Wake", SubResource( 26 ) ]
start_node = "Idle"
end_node = "Death"
graph_offset = Vector2( -465, -141 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=28]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 12.0

[node name="WalkingDroid" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
vframes = 31
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Damage = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/Wake = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 27 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 29 )
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2( 16, 29 )
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]

[editable path="HurtBox"]
